Branch Creation and Deploying Code to the Production

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>My First Ever Git Learning</h1>
     <h3>Git Push, Git Pull Testing</h3>
     <p>Successfully learnt Git Push and Pull</p>
+    <p>Learning How to Create Brunches and Deploy Code to <b>Production Site</b> / <b>gh-pages Branch</b></p>
 </body>
 </html>
